--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -6,7 +6,8 @@ of the aspects.
 
 This Ph.D. will present a generalized dynamic multi-model approach to maintenance scheduling which will be model after a practical maintenance handbook \cite{palmer_maintenance_2019}.
 \begin{table}
-	\begin{tabular}{@{}call@{}}
+	%\begin{tabular}{@{}call@{}}
+	\begin{tabular}{}
 		\toprule
 		Type & Symbol & Description \\
 
@@ -16,7 +17,8 @@ This Ph.D. will present a generalized dynamic multi-model approach to maintenanc
 \centering
 \caption{Summary of Sets, Parameters, and Variables}
 \label{tab:model_elements}
-\begin{tabular}{@{}call@{}} % Alignments: left, center, left
+\begin{tabular}{} % Alignments: left, center, left
+%\begin{tabular}{@{}call@{}} % Alignments: left, center, left
 \toprule
 Type & Symbol & Description \\
 \midrule
@@ -33,7 +35,8 @@ which above all else will us us through the process of creating a generalize mod
     \centering
     \caption{Example of a Simple Table}
     \label{tab:example_table}
-    \begin{tabular}{@{}call@{}}
+    \begin{tabular}{}
+%    \begin{tabular}{@{}call@{}}
         \toprule
         Type & Symbol & Description \\
         \midrule
