--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Mon 09 Dec 2024 01:23:05 PM UTC
+%% Tue 10 Dec 2024 01:25:44 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
@@ -13,19 +13,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.85\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.768)--(15.447,2.768);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.768)--(2.604,2.768);
-\draw[gp path] (15.447,2.768)--(15.267,2.768);
-\node[gp node right] at (2.240,2.768) {$1.9\times10^{11}$};
+\node[gp node right] at (2.240,1.845) {$1.9\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -42,18 +30,6 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.614)--(15.447,4.614);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.614)--(2.604,4.614);
-\draw[gp path] (15.447,4.614)--(15.267,4.614);
-\node[gp node right] at (2.240,4.614) {$2\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
 \draw[gp path] (2.424,5.537)--(15.447,5.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -61,19 +37,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,5.537)--(2.604,5.537);
 \draw[gp path] (15.447,5.537)--(15.267,5.537);
-\node[gp node right] at (2.240,5.537) {$2.05\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.460)--(15.447,6.460);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.460)--(2.604,6.460);
-\draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$2.1\times10^{11}$};
+\node[gp node right] at (2.240,5.537) {$2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -85,19 +49,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,7.383)--(2.604,7.383);
 \draw[gp path] (15.447,7.383)--(15.267,7.383);
-\node[gp node right] at (2.240,7.383) {$2.15\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,8.306)--(15.447,8.306);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.306)--(2.604,8.306);
-\draw[gp path] (15.447,8.306)--(15.267,8.306);
-\node[gp node right] at (2.240,8.306) {$2.2\times10^{11}$};
+\node[gp node right] at (2.240,7.383) {$2.05\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -109,19 +61,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,9.229)--(2.604,9.229);
 \draw[gp path] (15.447,9.229)--(15.267,9.229);
-\node[gp node right] at (2.240,9.229) {$2.25\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,10.152)--(15.447,10.152);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.152)--(2.604,10.152);
-\draw[gp path] (15.447,10.152)--(15.267,10.152);
-\node[gp node right] at (2.240,10.152) {$2.3\times10^{11}$};
+\node[gp node right] at (2.240,9.229) {$2.1\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -133,7 +73,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2.35\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2.15\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -150,74 +90,86 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.284,1.845)--(4.284,11.075);
+\draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,1.845)--(4.284,2.025);
-\draw[gp path] (4.284,11.075)--(4.284,10.895);
-\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
+\draw[gp path] (4.052,1.845)--(4.052,2.025);
+\draw[gp path] (4.052,11.075)--(4.052,10.895);
+\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.145,1.845)--(6.145,11.075);
+\draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,1.845)--(6.145,2.025);
-\draw[gp path] (6.145,11.075)--(6.145,10.895);
-\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
+\draw[gp path] (5.680,1.845)--(5.680,2.025);
+\draw[gp path] (5.680,11.075)--(5.680,10.895);
+\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.005,1.845)--(8.005,11.075);
+\draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,1.845)--(8.005,2.025);
-\draw[gp path] (8.005,11.075)--(8.005,10.895);
-\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
+\draw[gp path] (7.308,1.845)--(7.308,2.025);
+\draw[gp path] (7.308,11.075)--(7.308,10.895);
+\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (9.866,1.845)--(9.866,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,1.845)--(9.866,2.025);
-\draw[gp path] (9.866,11.075)--(9.866,10.895);
-\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.726,1.845)--(11.726,11.075);
+\draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,1.845)--(11.726,2.025);
-\draw[gp path] (11.726,11.075)--(11.726,10.895);
-\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
+\draw[gp path] (10.563,1.845)--(10.563,2.025);
+\draw[gp path] (10.563,11.075)--(10.563,10.895);
+\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.587,1.845)--(13.587,11.075);
+\draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.587,1.845)--(13.587,2.025);
-\draw[gp path] (13.587,11.075)--(13.587,10.895);
-\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
+\draw[gp path] (12.191,1.845)--(12.191,2.025);
+\draw[gp path] (12.191,11.075)--(12.191,10.895);
+\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.819,1.845)--(13.819,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.819,1.845)--(13.819,2.025);
+\draw[gp path] (13.819,11.075)--(13.819,10.895);
+\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -229,47 +181,49 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (15.447,1.845)--(15.447,2.025);
 \draw[gp path] (15.447,11.075)--(15.447,10.895);
-\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
+\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,4.175)--(2.424,4.108)--(2.424,4.078)--(2.461,4.069)--(2.461,4.057)%
-  --(2.461,4.046)--(2.461,4.018)--(2.498,4.015)--(2.498,4.003)--(2.498,3.983)--(2.498,3.971)%
-  --(2.498,3.970)--(2.536,3.964)--(2.536,3.947)--(2.536,3.938)--(2.536,3.932)--(2.536,3.922)%
-  --(2.573,3.914)--(2.573,3.890)--(2.573,3.870)--(2.573,3.844)--(2.610,3.837)--(2.610,3.826)%
-  --(2.610,3.756)--(2.610,3.753)--(2.610,3.741)--(2.647,3.731)--(2.647,3.713)--(2.647,3.711)%
-  --(2.647,3.672)--(2.684,3.665)--(2.684,3.653)--(2.684,3.646)--(2.684,3.642)--(2.684,3.632)%
-  --(2.722,3.622)--(2.759,3.620)--(2.796,3.620)--(2.833,3.613)--(2.833,3.610)--(2.833,3.606)%
-  --(2.833,3.605)--(2.833,3.604)--(2.871,3.595)--(2.871,3.593)--(2.871,3.590)--(2.908,3.576)%
-  --(2.908,3.574)--(2.908,3.570)--(2.982,3.566)--(2.982,3.563)--(2.982,3.552)--(2.982,3.544)%
-  --(3.019,3.540)--(3.019,3.529)--(3.057,3.527)--(3.094,3.519)--(3.131,3.518)--(3.168,3.512)%
-  --(3.168,3.509)--(3.168,3.506)--(3.168,3.505)--(3.205,3.504)--(3.243,3.502)--(3.280,3.497)%
-  --(3.280,3.492)--(3.280,3.484)--(3.317,3.482)--(3.354,3.480)--(3.391,3.478)--(3.391,3.469)%
-  --(3.429,3.469)--(3.466,3.466)--(3.466,3.462)--(3.615,3.429)--(3.652,3.425)--(3.652,3.420)%
-  --(3.689,3.419)--(3.764,3.411)--(3.801,3.409)--(3.801,3.407)--(3.801,3.403)--(3.838,3.401)%
-  --(3.875,3.395)--(3.912,3.393)--(3.912,3.391)--(4.024,3.390)--(4.024,3.388)--(4.061,3.387)%
-  --(4.136,3.384)--(4.210,3.381)--(4.210,3.380)--(4.247,3.379)--(4.284,3.377)--(4.284,3.369)%
-  --(4.284,3.367)--(4.433,2.852)--(4.433,2.849)--(4.433,2.843)--(4.508,2.842)--(4.508,2.836)%
-  --(4.508,2.830)--(4.545,2.827)--(4.582,2.827)--(4.582,2.824)--(4.619,2.823)--(4.843,2.821)%
-  --(4.880,2.820)--(4.917,2.815)--(4.917,2.812)--(4.917,2.809)--(4.954,2.805)--(4.954,2.803)%
-  --(4.991,2.794)--(5.029,2.793)--(5.103,2.791)--(5.140,2.788)--(5.215,2.787)--(5.252,2.785)%
-  --(5.363,2.784)--(5.401,2.780)--(5.475,2.779)--(5.512,2.775)--(5.550,2.774)--(5.661,2.774)%
-  --(5.698,2.774)--(5.736,2.773)--(5.773,2.772)--(6.033,2.769)--(6.108,2.767)--(6.554,2.766)%
-  --(6.591,2.765)--(6.591,2.763)--(6.629,2.762)--(6.852,10.895)--(6.963,10.894)--(7.001,10.893)%
-  --(7.001,10.892)--(7.075,10.891)--(7.075,10.886)--(7.112,10.881)--(7.187,10.878)--(7.187,10.876)%
-  --(7.261,10.873)--(7.484,10.872)--(7.670,10.870)--(7.745,10.863)--(7.856,10.863)--(7.968,10.862)%
-  --(8.042,10.861)--(8.117,10.858)--(8.266,10.856)--(8.415,10.855)--(8.489,10.853)--(8.489,10.850)%
-  --(8.563,10.847)--(8.563,10.846)--(8.638,10.846)--(8.749,10.846)--(8.749,10.844)--(8.787,10.844)%
-  --(8.936,2.734)--(8.973,2.734)--(9.010,2.731)--(9.047,2.728)--(9.122,2.727)--(9.122,2.722)%
-  --(9.233,2.715)--(9.270,2.714)--(9.419,2.712)--(9.568,2.711)--(9.754,2.711)--(9.791,2.710)%
-  --(9.866,2.710)--(10.498,2.709)--(10.573,2.708)--(10.759,2.708)--(10.796,10.704)--(12.580,10.219)%
-  --(13.512,2.704)--(13.773,2.703)--(13.810,2.703)--(13.959,2.703)--(14.182,2.703)--(14.368,2.702)%
-  --(14.703,2.701)--(15.149,2.700);
+\draw[gp path] (2.424,4.612)--(2.424,4.586)--(2.457,4.492)--(2.457,4.457)--(2.457,4.386)%
+  --(2.457,4.356)--(2.457,4.333)--(2.457,4.265)--(2.489,4.221)--(2.489,4.214)--(2.489,4.199)%
+  --(2.489,4.173)--(2.489,4.160)--(2.522,4.140)--(2.522,4.119)--(2.522,4.107)--(2.522,4.050)%
+  --(2.522,4.044)--(2.522,3.972)--(2.554,3.959)--(2.554,3.926)--(2.554,3.912)--(2.554,3.898)%
+  --(2.587,3.881)--(2.587,3.859)--(2.587,3.846)--(2.619,3.824)--(2.619,3.820)--(2.619,3.773)%
+  --(2.619,3.747)--(2.619,3.725)--(2.652,3.722)--(2.652,3.710)--(2.652,3.687)--(2.652,3.676)%
+  --(2.684,3.674)--(2.684,3.637)--(2.684,3.630)--(2.684,3.584)--(2.684,3.566)--(2.717,3.550)%
+  --(2.717,3.537)--(2.717,3.536)--(2.750,3.525)--(2.750,3.520)--(2.782,3.496)--(2.782,3.483)%
+  --(2.782,3.481)--(2.815,3.423)--(2.815,3.409)--(2.815,3.407)--(2.815,3.396)--(2.847,3.380)%
+  --(2.847,3.368)--(2.880,3.357)--(2.880,3.347)--(2.945,3.344)--(3.010,3.343)--(3.010,3.338)%
+  --(3.043,3.326)--(3.043,3.312)--(3.108,3.307)--(3.108,3.304)--(3.108,3.303)--(3.108,3.299)%
+  --(3.140,3.295)--(3.140,3.258)--(3.140,3.245)--(3.140,3.236)--(3.173,3.209)--(3.173,3.204)%
+  --(3.205,3.204)--(3.205,3.201)--(3.205,3.194)--(3.238,3.194)--(3.238,3.188)--(3.270,3.184)%
+  --(3.270,3.169)--(3.303,3.162)--(3.303,3.149)--(3.368,3.148)--(3.368,3.147)--(3.401,3.146)%
+  --(3.433,3.146)--(3.498,3.138)--(3.531,3.135)--(3.564,3.122)--(3.564,3.115)--(3.596,3.112)%
+  --(3.596,3.110)--(3.629,3.109)--(3.629,3.106)--(3.661,3.102)--(3.661,3.097)--(3.694,3.090)%
+  --(3.694,3.085)--(3.726,3.080)--(3.759,3.079)--(3.791,3.075)--(3.791,3.070)--(3.824,3.065)%
+  --(3.824,3.064)--(3.857,3.052)--(3.889,3.051)--(3.922,3.045)--(3.954,3.042)--(3.954,3.037)%
+  --(4.019,3.025)--(4.019,3.022)--(4.084,3.019)--(4.215,3.014)--(4.215,3.012)--(4.312,3.012)%
+  --(4.312,3.006)--(4.345,2.729)--(4.410,2.725)--(4.443,2.720)--(4.443,2.718)--(4.475,2.715)%
+  --(4.475,2.714)--(4.508,2.714)--(4.508,2.713)--(4.540,2.705)--(4.605,2.705)--(4.670,2.704)%
+  --(4.670,2.702)--(4.833,2.701)--(4.833,2.699)--(4.866,2.699)--(4.898,2.694)--(4.931,2.692)%
+  --(4.931,2.690)--(4.963,2.683)--(5.029,2.682)--(5.029,2.674)--(5.094,2.668)--(5.126,2.666)%
+  --(5.224,2.663)--(5.387,2.661)--(5.452,2.660)--(5.484,2.649)--(5.550,2.644)--(5.582,2.643)%
+  --(5.615,2.642)--(5.647,2.641)--(5.843,2.640)--(5.908,2.639)--(5.940,2.638)--(6.038,2.633)%
+  --(6.136,2.629)--(6.168,2.627)--(6.363,5.184)--(6.363,5.182)--(6.396,5.180)--(6.429,5.178)%
+  --(6.429,5.172)--(6.526,5.167)--(6.689,5.167)--(6.722,5.167)--(6.754,5.163)--(7.438,5.162)%
+  --(7.536,5.161)--(7.568,5.160)--(7.633,5.153)--(7.666,5.148)--(7.861,5.147)--(7.926,5.144)%
+  --(8.089,5.141)--(8.122,5.137)--(8.154,5.134)--(8.447,5.071)--(8.512,5.068)--(8.577,5.063)%
+  --(8.675,5.061)--(8.773,5.057)--(9.391,5.052)--(9.652,5.047)--(10.010,5.046)--(10.075,5.044)%
+  --(10.238,10.102)--(10.303,10.099)--(10.368,10.097)--(10.759,10.092)--(11.312,10.086)--(11.442,10.081)%
+  --(11.540,10.080)--(11.670,10.078)--(11.735,10.077)--(11.801,10.076)--(11.833,10.071)--(12.159,10.069)%
+  --(12.419,9.825)--(12.973,9.818)--(13.070,9.813)--(13.103,9.813)--(13.819,9.813)--(13.852,9.813)%
+  --(14.047,9.810)--(14.080,9.807)--(14.080,9.806);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
 \gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
