--- a/papers/actor-based-large-neighborhood-search/refs.bib
+++ b/papers/actor-based-large-neighborhood-search/refs.bib
@@ -1791,3 +1791,21 @@
 	file = {C:\Users\s174460\Zotero\storage\IMJTSWZH\Powell - 2019 - A unified
 	        framework for stochastic optimization.pdf},
 }
+
+@book{talbiMetaheuristicsDesignImplementation2009,
+	title = {Metaheuristics: From Design to Implementation},
+	shorttitle = {Metaheuristics},
+	author = {Talbi, El-Ghazali},
+	year = {2009},
+	publisher = {John Wiley \& Sons},
+	address = {Hoboken, N.J},
+	isbn = {978-0-470-27858-1},
+	langid = {english},
+	lccn = {QA402.5 .T39 2009},
+	keywords = {Computer algorithms,Data processing,Heuristic programming,
+	            Mathematical optimization,Metaheuristics,Problem solving},
+	annotation = {OCLC: ocn230183356},
+	file = {C:\Users\s174460\Zotero\storage\ZMLXI6LK\Talbi - 2009 -
+	        Metaheuristics from design to implementation.pdf},
+}
+
