--- a/papers/actor-based-large-neighborhood-search/tex/results.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/results.tex
@@ -10,9 +10,9 @@ changing the $\ParStrategicValue$ for period $\ElementPeriod \in
 
 \subsection{Data Instance}
 This data instance comes from Total Energies, where data is extracted from their SAP ERP system. The data instance used in this paper is
-associated with a specific offshore platform that for the period that we are looking at contains 3487 outstanding work orders, have 16 
-different resource skill sets (e.g. mechanics, electricians, turbine specialists, etc.), and finally the scheduling horizon stretches over
-a 52 bi-weekly periods meaning approximately 2 years.
+associated with a specific offshore platform that for the time horizon that we are looking at contains 3487 outstanding work orders ($\SetWorkOrder{}$), have 16 
+different resource skill sets ($\SetResource$) (e.g. mechanics, electricians, turbine specialists, etc.), and finally the scheduling horizon stretches over
+a 52 bi-weekly periods ($\SetPeriod$) meaning approximately 2 years.
  
 \begin{table}[H]
 \centering
@@ -44,30 +44,39 @@ points in time $\VarMetaTime$.
 	\label{tab:responses:inclusion}
 \end{table}
 
-In figure~\ref{fig:responses:inclusion} the effects of changing the $
-\ParStrategicInclude$ parameter in real-time. It shows that the model quickly
+Figure~\ref{fig:responses:inclusion} shows the effects of changing the $
+\ParStrategicInclude$ parameter in real-time. The model quickly
 converges and when the system is pertubed by an input response the objective
-value \ref{eqn:objective:strategic} converges again to a new solution. This can
-be understood as the model optimizing around the pertubation and finding a new converged solution.
+value \ref{eqn:objective:strategic} shows a small spike and then quickly converges to a new solution. 
 
 \begin{figure}[H]
 	\centering
 	\resizebox{\linewidth}{!}{
 		\input{figures/strategic_objective_value_inclusion_plot.tex}
 	}
-	\caption{Figure Caption}
+	\caption{Effects of pertubing the solution by forcing work orders into specific periods.}
 	\label{fig:responses:inclusion}
 \end{figure}
-Figure~\ref{fig:responses:inclusion} show 5 pertubations with the first at time = 60s where the objective value 
-slightly drops in response to the inclusion, the objective value drop due to the inclusion breaking previous constraints given by the 
-$\ParStrategicExclude$ parameter making the AbLNS able to find better solutions. The remaining 4 pertubations all show the same 
-response, an increase in the objective value followed by a subsequent convergence. 
+Figure~\ref{fig:responses:inclusion} 
+show 5 pertubations with the first at
+time = 60s where the objective value  slightly increases in response to the
+inclusion, the objective value increases due to the inclusion either causing
+the capacity to be exceeded or the inclusion resulting in a selected $
+\ParStrategicValue$ that has a lower value. The remaining 4 pertubations
+all show the same  pattern, an increase in the objective value followed by a
+subsequent convergence.
 
 \subsection{Response to Exclusion}
-The response to exclusion is associated with the $\ParStrategicExclude$ parameter and is found in equation~\ref{eqn:constraint:strategic:exclude}.
-Here specific work orders ($\ElementWorkOrder \in \SetWorkOrder{}$) are being excluded for specific periods ($\ElementPeriod \in \SetPeriod$).
-The responses that the AbLNS will be perturbed with are shown in table~\ref{tab:responses:exclusion} with the setup being very similar to the 
-one in table~\ref{tab:responses:inclusion}. The main distinction being that the pertubation affects many more work orders.
+The response to exclusion is associated with the $\ParStrategicExclude$
+parameter and is found in equation~\ref{eqn:strategic:constraint:exclude}.
+Here specific work orders ($\ElementWorkOrder \in \SetWorkOrder{}$) are
+being excluded from specific periods ($\ElementPeriod \in \SetPeriod$).
+The pertubations that the AbLNS will be affected by are shown in
+table~\ref{tab:responses:exclusion}
+with the setup being very similar to the
+one in table~\ref{tab:responses:inclusion}.
+The main distinction being that the pertubation affects 500 instead of 50 work orders, the higher number 
+of affected work orders is chosen as many exclusions of do not affect the assignment of a work order.
 
 \begin{table}[H]
 	\centering
@@ -76,13 +85,13 @@ one in table~\ref{tab:responses:inclusion}. The main distinction being that the 
 	\begin{tabular}[c]{@{}c@{}}\end{tabular}                                & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 60$\end{tabular} & \begin{tabular}[c]{@{}c@{}} $\VarMetaTime_2 = 120$ \end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 180$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_4 = 240$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_5 = 300$\end{tabular} \\ \hline
 	\begin{tabular}[c]{@{}c@{}}$\Delta |\ParStrategicExclude|$\end{tabular} & 500                                                           & 500                                                              & 500                                                            & 500                                                            & 500                                                       \\ \hline
 	\end{tabular}
-	\caption{The pertubations of excludion work order from specific periods in the weekly schedule. 
+	\caption{The pertubations of excluding a work order from specific periods in the weekly schedule. 
 	Pertubations occur at 60 second time intervals affecting 500 work orders each time.}
 	\label{tab:responses:exclusion}
 \end{table}
 
-In figure~\ref{fig:responses:exclusion} a shows a substantial spike in the objective value to the effects 
-of excluding work orders as given in table~\ref{tab:responses:exclusion}. 
+Figure~\ref{fig:responses:exclusion}  show a substantial spike in the objective value  
+after a pertubation as given in table~\ref{tab:responses:exclusion}. 
 
 \begin{figure}[H]
 	\centering
@@ -93,15 +102,16 @@ of excluding work orders as given in table~\ref{tab:responses:exclusion}.
 	\label{fig:responses:exclusion}
 \end{figure}
 
-From figure~\ref{fig:responses:inclusion} and figure~\ref{fig:responses:exclusion} it is now
-clear that the AbLNS method can handle dynamic entries of work order. The next section will discuss the effects of dynamically changing the 
-resource capacities. 
+From figure~\ref{fig:responses:inclusion} and figure~\ref{fig:responses:exclusion} it is 
+clear that the AbLNS method can handle dynamic entries of work orders. The next section will discuss the effects of dynamically changing the 
+resource capacities $\ParStrategicResource$. 
 
 \subsection{Response to Additional Weekly Capacity}
-Table~\ref{tab:responses:resource-addition} shows the pertubations that the AbLNS will be subject to during its 360 second execution. 
-Pertubing the resources $\ParStrategicResource$ affects the solution significantly more than $\ParStrategicExclude$ and 
-$\ParStrategicInclude$ and therefore 100 second intervals are specified instead of 60 second intervals.
-
+Table~\ref{tab:responses:resource-addition} details the pertubations that the
+AbLNS will be subject to during its 360 second execution. Pertubing the
+resources $\ParStrategicResource$ affects the solution considerably more than
+pertubing $\ParStrategicExclude$ and $\ParStrategicInclude$ and therefore 100
+second intervals are specified instead of 60 second intervals.
 
 \begin{table}[H]
 	\centering
@@ -116,11 +126,13 @@ $\ParStrategicInclude$ and therefore 100 second intervals are specified instead 
 	\label{tab:responses:resource-addition}
 \end{table}
 
-In figure~\ref{fig:responses:resources-addition} the effects of progressively increasing 
-resources is highlighted. The AbLNS starts with a base load which is then reduced at time = 100 seconds causing the objective value by
-increase as $\ParStrategicPenalty$ in equation~\ref{eqn:constraint:strategic:resource} absorbes the
-exceeded capacity. At time = 200 the resources are increased to the base load again, and at time = 300 seconds the resources are 
-increased to their maximum value. 
+Figure~\ref{fig:responses:resources-addition} shows the effects of progressively
+increasing  available resources. The AbLNS starts with a base load which is
+then reduced at time = 100 seconds causing the objective value by increase
+as $\ParStrategicPenalty$ in equation~\ref{eqn:strategic:constraint:resource}
+absorbes the exceeded capacity. At time = 200 the resources are increased to the
+base load again, and at time = 300 seconds the resources are  increased to their
+maximum value.
 
 \begin{figure}[H]%% placement specifier
 	\centering
@@ -132,8 +144,9 @@ increased to their maximum value.
 \end{figure}
 
 \subsection{Response to Reduced Weekly Capacity}
-Table~\ref{tab:resources:resource-subtraction} shows the pertubations that the AbLNS will affected by. Starting from a base load of the 
-amount of available resources are progressively decreased. 
+Table~\ref{tab:resources:resource-subtraction} details the pertubations that the
+AbLNS will affected by. Starting from a base load of the amount of available
+resources are progressively decreased.
 \begin{table}[H]
 	\centering
 	\begin{tabular}{|c|c|c|c|c|c|}
@@ -146,8 +159,9 @@ amount of available resources are progressively decreased.
 	\label{tab:resources:resource-subtraction}
 \end{table}
 
-Figure~\ref{fig:responses:resource-subtraction} shows the effects of perturbing the AbLNS by starting from a base load 
-and then progressively reducing capacity.
+Figure~\ref{fig:responses:resource-subtraction} shows the effects of perturbing
+the AbLNS by starting from a base load  and then progressively reducing
+capacity.
 
 \begin{figure}[H]%% placement specifier
 	\centering
@@ -160,26 +174,28 @@ and then progressively reducing capacity.
 
 
 \subsection{Response to Changes in Item Weights}
-The final parameter that will be changed is the work order value $\ParStrategicValue$. Table~\ref{tab:responses:value_change} shows
-the pertubations that the AbLNS will by affected with. On each iteration 500 work orders are having their values changed by the amount 
-shown in the 4th row of table~\ref{tab:responses:value_change}.
+The final parameter that will be changed is the work order value $
+\ParStrategicValue$. Table~\ref{tab:responses:value_change} details the
+pertubations that the AbLNS will by affected by. On each iteration 100 work
+orders are having their values changed by the amount  shown in the 4th row of
+table~\ref{tab:responses:value_change}.
 
 \begin{table}[H]
 	\centering
 	\begin{tabular}{|c|c|c|c|c|c|}
 	\hline
 	                                                                                                                   & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_1 = 60$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_2 = 120$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_3 = 180$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_4 = 240$\end{tabular} & \begin{tabular}[c]{@{}c@{}}$\VarMetaTime_5 = 300$\end{tabular} \\ \hline
-	$\Delta |\SetWorkOrder[\VarMetaTime_{n}]{} \triangle \SetWorkOrder[\VarMetaTime_{n-1}]{}              |$           & 500                                                           & 500                                                            & 500                                                            & 500                                                            & 500                                                      \\ \hline
+	$\Delta |\SetWorkOrder[\VarMetaTime_{n}]{} \triangle \SetWorkOrder[\VarMetaTime_{n-1}]{}              |$           & 100                                                           & 100                                                            & 100                                                            & 100                                                            & 100                                                      \\ \hline
 	$\Delta |\SetPeriod[\VarMetaTime_{n}]{} \triangle \SetPeriod[\VarMetaTime_{n-1}]{}                    |$           & 52                                                            & 52                                                             & 52                                                             & 52                                                             & 52                                                       \\ \hline
 	\makecell{$\Delta |\ParStrategicValue[\VarMetaTime_{n}]| -$\\ $|\ParStrategicValue[\VarMetaTime_{n - 1}]|$}        & $3.75 \cdot 10^{7}$                                           & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                            & $3.75 \cdot 10^{7}$                                       \\ \hline
 	\end{tabular}
 	\label{tab:responses:value_change}
 \end{table}
 
-Figure~\ref{fig:responses:value_change} shows the effects of pertubing the AbLNS by changing the 
-parameter in the objective function~\ref{eqn:objective:strategic} that controls the value of assigning a work
-order to a specific period.  
-% FIX: You have to pick them at random everytime! I do not see another way around it.
+Figure~\ref{fig:responses:value_change} shows the effects of
+pertubing the AbLNS by changing the $\ParStrategicValue$ parameter in the objective
+function~\ref{eqn:objective:strategic} which specifies the value of assigning a
+work order to a specific period.
 
 \begin{figure}[H]%% placement specifier
 	\centering
